crates/keron-lang/tests/corpus/errors/check/fn_unknown_callee.keron
val x: Int = nope(1, 2)
